<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.labw6.MainActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/x" android:layout_alignParentTop="true"
            android:inputType="number" android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/y" android:layout_below="@+id/x"
            android:inputType="number" android:autoText="false" android:layout_alignRight="@+id/x"
            android:layout_alignEnd="@+id/x"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textResult" android:layout_below="@+id/y" android:layout_centerHorizontal="true"
            android:inputType="number"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq"
            android:id="@+id/sum"
            android:layout_below="@+id/textResult" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="49dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:id="@+id/minus"
            android:layout_below="@+id/sum" android:layout_alignLeft="@+id/sum" android:layout_alignStart="@+id/sum"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umn"
            android:id="@+id/umnojenie" android:layout_below="@+id/minus" android:layout_alignRight="@+id/minus"
            android:layout_alignEnd="@+id/minus"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delenie"
            android:id="@+id/delenie" android:layout_below="@+id/umnojenie" android:layout_alignRight="@+id/umnojenie"
            android:layout_alignEnd="@+id/umnojenie"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xor"
            android:id="@+id/xor"
            android:layout_below="@+id/delenie" android:layout_alignLeft="@+id/delenie"
            android:layout_alignStart="@+id/delenie"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod"
            android:id="@+id/mod"
            android:layout_below="@+id/clearText" android:layout_alignLeft="@+id/binary"
            android:layout_alignStart="@+id/binary" android:layout_alignRight="@+id/textResult"
            android:layout_alignEnd="@+id/textResult"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_bin"
            android:id="@+id/binary"
            android:layout_below="@+id/mod" android:layout_alignLeft="@+id/result"
            android:layout_alignStart="@+id/result" android:layout_alignRight="@+id/textResult"
            android:layout_alignEnd="@+id/textResult"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res"
            android:id="@+id/result"
            android:layout_alignBottom="@+id/xor" android:layout_toRightOf="@+id/delenie"
            android:layout_below="@+id/umnojenie" android:layout_alignRight="@+id/textResult"
            android:layout_alignEnd="@+id/textResult"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/clearText"
            android:layout_alignLeft="@+id/mod"
            android:layout_alignStart="@+id/mod"
            android:layout_above="@+id/minus" android:layout_alignRight="@+id/textResult"
            android:layout_alignEnd="@+id/textResult" android:layout_alignTop="@+id/sum"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView" android:layout_alignLeft="@+id/clearText"
            android:layout_alignStart="@+id/clearText" android:layout_below="@+id/textResult"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/result"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/textView" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/first_number"
            android:id="@+id/textView3"
            android:layout_alignBottom="@+id/x" android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/second_number"
            android:id="@+id/textView5"
            android:layout_alignBottom="@+id/y" android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"/>
</RelativeLayout>
